qa: Add about menu item and functionality

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -18,6 +18,9 @@ menu_settings = Settings
 menu_stdlib = Enable standard library
 menu_language = Language
 
+menu_help = Help
+menu_about = About
+
 tooltip_new = Create new file
 tooltip_open = Open file
 tooltip_save = Save file
@@ -27,6 +30,10 @@ tooltip_previousstep = Previous step
 tooltip_nextstep = Next step
 tooltip_nextsolution = Next solution
 tooltip_cancel = Cancel
+
+about_name = VIPER Prolog Education Runtime
+about_authors = Created by:
+about_libraries = Using:
 
 dialog_yes = Yes
 dialog_no = No
