qa: Add popup for showing the standard library code

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -20,6 +20,7 @@ menu_language = Language
 
 menu_help = Help
 menu_about = About
+menu_show_standard = Show standard library
 
 tooltip_new = Create new file
 tooltip_open = Open file
@@ -90,3 +91,4 @@ goal_not_supported = Goal not supported
 term = a term
 functor = functor
 unification = Unification
+standard_library = Standard library
