qa: Refine about popup design, add description and links

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -31,9 +31,10 @@ tooltip_nextstep = Next step
 tooltip_nextsolution = Next solution
 tooltip_cancel = Cancel
 
-about_name = VIPER Prolog Education Runtime
+about_name = VIPER Interactive Prolog Education Runtime
 about_authors = Created by:
 about_libraries = Using:
+about_description = An educational tool for the Prolog programming language, developed as a PSE project at the KIT
 
 dialog_yes = Yes
 dialog_no = No
