qa: Add console input field placeholder text, fix missing disable on new file

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -32,6 +32,8 @@ tooltip_nextstep = Next step
 tooltip_nextsolution = Next solution
 tooltip_cancel = Cancel
 
+input_hint = Enter a query...
+
 about_name = VIPER Interactive Prolog Education Runtime
 about_authors = Created by:
 about_libraries = Using:
