qa: Add visualisation placeholder

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -33,6 +33,7 @@ tooltip_nextsolution = Next solution
 tooltip_cancel = Cancel
 
 input_hint = Enter a query...
+visualisation_hint = Parse source code and\nenter a query to start the\nvisualisation...
 
 about_name = VIPER Interactive Prolog Education Runtime
 about_authors = Created by:
