qa: Fix failing tests that rely on hasGraph and output text

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -32,7 +32,7 @@ tooltip_nextstep = Next step
 tooltip_nextsolution = Next solution
 tooltip_cancel = Cancel
 
-input_hint = Enter a query...
+input_hint = Enter a new query...
 visualisation_hint = Parse source code and\nenter a query to start the\nvisualisation...
 
 about_name = VIPER Interactive Prolog Education Runtime
