qa: Draft QA report sections

--- a/Documentation/Testbericht/bericht.tex
+++ b/Documentation/Testbericht/bericht.tex
@@ -63,6 +63,45 @@
 \pagenumbering{arabic}
 \setcounter{page}{1}
 
-% Anschluss an Implementierungsbericht
+% Anschluss an Implementierungsbericht, erreichte Abdeckung etc.
+
+% Arbeitsweise (GitLab Issues, Assignees, Gewichtungen, ...)
+
+% Verwendete Werkzeuge und Verfahren (statische Tools, JUnit, JAssertSwing, andere Leute vor unser Programm gesetzt)
+
+\section{Tests}
+
+\subsection{Unit-Tests}
+
+% Grobe Liste, welche Dinge wir getestet haben
+
+% Wie GUI getestet (JAssertSwing)?
+
+\subsection{Integrationstests}
+
+% Tests aus Pflichtenheft
+
+\subsection{Statische Analyse}
+
+% Checkstyle, Linter, sonstige Tools für Codequalität
+
+\section{Gefundene Fehler}
+
+\begin{enumerate}[label=\#\arabic*]
+  \item \textbf{Hier steht die kurze Beschreibung des Fehlers}\\
+        Hier steht eine ausf\"uhrlichere Beschreibung inklusive der \enquote{Symptome} (was sieht man?). Warum tritt der Fehler auf?\\\\
+        \textbf{Behebung:} Was genau wurde geändert um es zu beheben?
+\end{enumerate}
+
+\section{Zusätzliche Features und Änderungen}
+
+% Ergebnisse des Usability Testings (Reaktionen der Leute!)
+% Icons geändert/Buttons aufgeteilt, Zoomen, Shortcuts, Stdlib anzeigen
+
+\section{Statistiken}
+
+% Testabdeckung mit JUnit
+% Wie viele andere Leute haben das Programm getestet
+% Monkey Testing Ergebnisse
 
 \end{document}
