qa: Add advanced zoom settings, remove visualisation zoom buttons

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -31,6 +31,14 @@ tooltip_previousstep = Previous step
 tooltip_nextstep = Next step
 tooltip_nextsolution = Next solution
 tooltip_cancel = Cancel
+tooltip_zoom_in = Zoom in
+tooltip_zoom_out = Zoom out
+
+zoom_target_visualisation = Visualisation
+zoom_target_editor = Editor
+zoom_target_console = Console
+zoom_target_editor_console = Editor & Console
+zoom_target_all = All
 
 input_hint = Enter a new query...
 visualisation_hint = Parse source code and\nenter a query to start the\nvisualisation...
