qa: Add welcome menu popup

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -96,3 +96,9 @@ term = a term
 functor = functor
 unification = Unification
 standard_library = Standard library
+help = Help
+
+tab_introduction = Introduction
+tab_editor = Editor
+tab_console = Console
+tab_visualisation = Visualisation
