qa: Finish welcome popup UI code, draft introduction

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -96,9 +96,44 @@ term = a term
 functor = functor
 unification = Unification
 standard_library = Standard library
-help = Help
+welcome = Welcome
 
 tab_introduction = Introduction
 tab_editor = Editor
 tab_console = Console
 tab_visualisation = Visualisation
+
+welcome_introduction =\
+<html><div style='text-align: center;'>\
+<b>Welcome to the VIPER Prolog Education Runtime</b><br\>\
+This is a short guide on how to use the environment.<br\><br\>\
+Additional features are explained in their respective sections.<br\>\
+You can always open this popup again by using the Help > Welcome menu item in the menu bar.</div><br\><br\>\
+<b>Basic workflow:</b>\
+<ol>\
+<li>Use the editor to enter your Prolog source code</li>\
+<li>Parse your source code by clicking the corresponding button in the menu bar or the tool bar</li>\
+<li>If the source code is valid, the input field will unlock and you can enter your query;<br\>\
+invalid source code causes the parser to print an error message to the console</li>\
+<li>Confirm your query by pressing the enter key or the corresponding send button</li>\
+<li>Control the interpretation by using the corresponding buttons in the menu bar or the tool bar</li>\
+</ol>\
+</html>
+
+welcome_editor =\
+<html>\
+VIPER comes with a basic built-in text editor.\
+<b>File operations:</b>\
+</html>
+
+welcome_console =\
+<html>\
+<b>Test</b>\
+<b>Test</b>\
+</html>
+
+welcome_visualisation =\
+<html>\
+<b>Test</b>\
+<b>Test</b>\
+</html>
