--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -116,24 +116,119 @@ You can always open this popup again by using the Help > Welcome menu item in th
 <li>If the source code is valid, the input field will unlock and you can enter your query;<br\>\
 invalid source code causes the parser to print an error message to the console</li>\
 <li>Confirm your query by pressing the enter key or the corresponding send button</li>\
-<li>Control the interpretation by using the corresponding buttons in the menu bar or the tool bar</li>\
+<li>Control the interpretation by using the corresponding buttons in the menu bar or the tool bar<br\></li>\
+valid queries automatically generate a visualisation shown in the panel to the right\
 </ol>\
 </html>
 
 welcome_editor =\
 <html>\
-VIPER comes with a basic built-in text editor.\
-<b>File operations:</b>\
+<div style='text-align: center;'><b>Using the built-in text editor</b></div>\
+<table style="width:100%">\
+<tr>\
+<th style="text-align:left">Function</th>\
+<th style="text-align:left">Menu entry</th>\
+<th style="text-align:left">Shortcut</th>\
+<th style="text-align:left">Toolbar button</th>\
+</tr>\
+\
+<tr>\
+<td>New file</th>\
+<td>File > New</th>\
+<td>CTRL + N</th>\
+<td>Create new file</th>\
+</tr>\
+\
+<tr>\
+<td>Open file</th>\
+<td>File > Open</th>\
+<td>CTRL + O</th>\
+<td>Open file</th>\
+</tr>\
+\
+<tr>\
+<td>Save file</th>\
+<td>File > Save</th>\
+<td>CTRL + S</th>\
+<td>Save file</th>\
+</tr>\
+\
+<tr>\
+<td>Save as new file</th>\
+<td>File > Save as...</th>\
+<td>CTRL + Shift + S</th>\
+<td>None</th>\
+</tr>\
+\
+<tr>\
+<td>Open a recently used file</th>\
+<td>File > Recently used > ...</th>\
+<td>None</th>\
+<td>None</th>\
+</tr>\
+\
+<tr>\
+<td>Format the source code</th>\
+<td>Program > Format</th>\
+<td>CTRL + F</th>\
+<td>Format program</th>\
+</tr>\
+\
+<tr>\
+<td>Resize the editor</th>\
+<td>None</th>\
+<td>CTRL + +/-/Mousewheel</th>\
+<td>In-/Decrease Text-Zoom</th>\
+</tr>\
+\
+<tr>\
+<td>Reset the editor text size</th>\
+<td>Settings > Reset text zoom</th>\
+<td>None</th>\
+<td>None</th>\
+</tr>\
+\
+<tr>\
+<td>Parse source code</th>\
+<td>Program > Parse</th>\
+<td>CTRL + P</th>\
+<td>Parse program</th>\
+</tr>\
+</table>\
+<div style='text-align: center;'>Note: The format function only works when the entered source code is valid.</div>\
 </html>
 
 welcome_console =\
 <html>\
-<b>Test</b>\
-<b>Test</b>\
+<div style='text-align: center;'><b>Understanding the built-in console</b></div><br\>\
+<b>Input field:</b>\
+<ul>\
+<li>The input field gets unlocked once valid source code has been parsed</li>\
+<li>Once a query is entered into the field, use the Enter key or the send button<br\>\
+to start the interpretation</li>\
+</ul>\
+<b>Output area:</b>\
+<ul>\
+<li>The output area has three different output types: info, error and success</li>\
+<li>Info: Black text, mostly information about file operations</li>\
+<li>Error: Red text, mostly caused by unsuccessful parsing or file operations</li>\
+<li>Success: Green text, used for succesful unification during interpretation</li>\
+</ul>\
 </html>
 
 welcome_visualisation =\
 <html>\
-<b>Test</b>\
-<b>Test</b>\
+<div style='text-align: center;'><b>Understanding the visualisation</b><br\>\
+During the interpretation, the visualisation shows the graph corresponding to the<br\>\
+current interpretation step.</div><br\>\
+<b>Navigation</b>\
+<ul>\
+<li>Move inside the visualisation by dragging the mouse while holding the left mouse button</li>\
+<li>Zoom using the mouse wheel or the +/- buttons inside the visualisation panel</li>\
+</ul>\
+<b>Export</b>\
+<ul>\
+<li>Export the visualisation using the options in the Export menu entry</li>\
+<li>Exported images will always contain the whole graph, not just the area shown in the panel</li>\
+</ul>\
 </html>
