qa: Finish drafting the english version of the welcome popup

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -102,22 +102,25 @@ tab_introduction = Introduction
 tab_editor = Editor
 tab_console = Console
 tab_visualisation = Visualisation
+tab_interpreter = Interpreter
+tab_extras = Extras
 
 welcome_introduction =\
 <html><div style='text-align: center;'>\
-<b>Welcome to the VIPER Prolog Education Runtime</b><br\>\
-This is a short guide on how to use the environment.<br\><br\>\
-Additional features are explained in their respective sections.<br\>\
-You can always open this popup again by using the Help > Welcome menu item in the menu bar.</div><br\><br\>\
-<b>Basic workflow:</b>\
+  <b>Welcome to the VIPER Prolog Education Runtime</b><br\>\
+  This is a short guide on how to use the environment.<br\><br\>\
+  Additional features are explained in their respective sections.<br\>\
+  You can always open this popup again by using the Help > Welcome menu item in the menu bar.<br\>\
+  To change the language of the displayed text, use the Settings > Language menu in the menu bar.</div><br\><br\>\
+  <b>Basic workflow:</b>\
 <ol>\
-<li>Use the editor to enter your Prolog source code</li>\
-<li>Parse your source code by clicking the corresponding button in the menu bar or the tool bar</li>\
-<li>If the source code is valid, the input field will unlock and you can enter your query;<br\>\
-invalid source code causes the parser to print an error message to the console</li>\
-<li>Confirm your query by pressing the enter key or the corresponding send button</li>\
-<li>Control the interpretation by using the corresponding buttons in the menu bar or the tool bar<br\></li>\
-valid queries automatically generate a visualisation shown in the panel to the right\
+  <li>Use the editor to enter your Prolog source code</li>\
+  <li>Parse your source code by clicking the corresponding button in the menu bar or the toolbar</li>\
+  <li>If the source code is valid, the input field will unlock and you can enter your query;<br\>\
+      invalid source code causes the parser to print an error message to the console</li>\
+  <li>Confirm your query by pressing the enter key or the corresponding send button</li>\
+  <li>Control the interpretation by using the respective buttons in the menu bar or the toolbar<br\></li>\
+      valid queries automatically generate a visualisation shown in the panel to the right\
 </ol>\
 </html>
 
@@ -126,109 +129,148 @@ welcome_editor =\
 <div style='text-align: center;'><b>Using the built-in text editor</b></div>\
 <table style="width:100%">\
 <tr>\
-<th style="text-align:left">Function</th>\
-<th style="text-align:left">Menu entry</th>\
-<th style="text-align:left">Shortcut</th>\
-<th style="text-align:left">Toolbar button</th>\
+  <th style="text-align:left">Function</th>\
+  <th style="text-align:left">Menu entry</th>\
+  <th style="text-align:left">Shortcut</th>\
+  <th style="text-align:left">Toolbar button (Tooltip)</th>\
 </tr>\
 \
 <tr>\
-<td>New file</th>\
-<td>File > New</th>\
-<td>CTRL + N</th>\
-<td>Create new file</th>\
+  <td>New file</th>\
+  <td>File > New</th>\
+  <td>CTRL + N</th>\
+  <td>Create new file</th>\
 </tr>\
 \
 <tr>\
-<td>Open file</th>\
-<td>File > Open</th>\
-<td>CTRL + O</th>\
-<td>Open file</th>\
+  <td>Open file</th>\
+  <td>File > Open</th>\
+  <td>CTRL + O</th>\
+  <td>Open file</th>\
 </tr>\
 \
 <tr>\
-<td>Save file</th>\
-<td>File > Save</th>\
-<td>CTRL + S</th>\
-<td>Save file</th>\
+  <td>Save file</th>\
+  <td>File > Save</th>\
+  <td>CTRL + S</th>\
+  <td>Save file</th>\
 </tr>\
 \
 <tr>\
-<td>Save as new file</th>\
-<td>File > Save as...</th>\
-<td>CTRL + Shift + S</th>\
-<td>None</th>\
+  <td>Save as new file</th>\
+  <td>File > Save as...</th>\
+  <td>CTRL + Shift + S</th>\
+  <td>None</th>\
 </tr>\
 \
 <tr>\
-<td>Open a recently used file</th>\
-<td>File > Recently used > ...</th>\
-<td>None</th>\
-<td>None</th>\
+  <td>Open a recently used file</th>\
+  <td>File > Recently used > ...</th>\
+  <td>None</th>\
+  <td>None</th>\
 </tr>\
 \
 <tr>\
-<td>Format the source code</th>\
-<td>Program > Format</th>\
-<td>CTRL + F</th>\
-<td>Format program</th>\
+  <td>Format the source code</th>\
+  <td>Program > Format</th>\
+  <td>CTRL + F</th>\
+  <td>Format program</th>\
 </tr>\
 \
 <tr>\
-<td>Resize the editor</th>\
-<td>None</th>\
-<td>CTRL + +/-/Mousewheel</th>\
-<td>In-/Decrease Text-Zoom</th>\
+  <td>Resize the editor</th>\
+  <td>None</th>\
+  <td>CTRL + +/-/Mousewheel</th>\
+  <td>In-/Decrease Text-Zoom</th>\
 </tr>\
 \
 <tr>\
-<td>Reset the editor text size</th>\
-<td>Settings > Reset text zoom</th>\
-<td>None</th>\
-<td>None</th>\
+  <td>Reset the editor text size</th>\
+  <td>Settings > Reset text zoom</th>\
+  <td>None</th>\
+  <td>None</th>\
 </tr>\
 \
 <tr>\
-<td>Parse source code</th>\
-<td>Program > Parse</th>\
-<td>CTRL + P</th>\
-<td>Parse program</th>\
+  <td>Parse source code</th>\
+  <td>Program > Parse</th>\
+  <td>CTRL + P</th>\
+  <td>Parse program</th>\
 </tr>\
 </table>\
+<\br>\
 <div style='text-align: center;'>Note: The format function only works when the entered source code is valid.</div>\
 </html>
 
 welcome_console =\
 <html>\
-<div style='text-align: center;'><b>Understanding the built-in console</b></div><br\>\
+<div style='text-align: center;'><b>Using the built-in console</b></div><br\>\
 <b>Input field:</b>\
 <ul>\
-<li>The input field gets unlocked once valid source code has been parsed</li>\
-<li>Once a query is entered into the field, use the Enter key or the send button<br\>\
-to start the interpretation</li>\
+  <li>The input field gets unlocked once valid source code has been parsed</li>\
+  <li>Once a query is entered into the field, use the Enter key or the send button<br\>\
+      to start the interpretation</li>\
+  <li>Queries that have already been sent are saved in a history for the current session;<br\>\
+      you can use the arrow keys on your keyboard while inside the input field to navigate this history</li>\
 </ul>\
 <b>Output area:</b>\
 <ul>\
-<li>The output area has three different output types: info, error and success</li>\
-<li>Info: Black text, mostly information about file operations</li>\
-<li>Error: Red text, mostly caused by unsuccessful parsing or file operations</li>\
-<li>Success: Green text, used for succesful unification during interpretation</li>\
+  <li>The output area has three different output types: info, error and success</li>\
+  <li>Info: Black text, mostly information about file operations</li>\
+  <li>Error: Red text, mostly caused by unsuccessful parsing or file operations</li>\
+  <li>Success: Green text, used for succesful unification during interpretation</li>\
 </ul>\
 </html>
 
 welcome_visualisation =\
 <html>\
-<div style='text-align: center;'><b>Understanding the visualisation</b><br\>\
-During the interpretation, the visualisation shows the graph corresponding to the<br\>\
-current interpretation step.</div><br\>\
-<b>Navigation</b>\
+<div style='text-align: center;'><b>Using the visualisation</b><br\>\
+  During the interpretation, the visualisation shows the graph corresponding to the<br\>\
+  current interpretation step.</div><br\>\
+<b>Navigation:</b>\
 <ul>\
-<li>Move inside the visualisation by dragging the mouse while holding the left mouse button</li>\
-<li>Zoom using the mouse wheel or the +/- buttons inside the visualisation panel</li>\
+  <li>Move inside the visualisation by dragging the mouse while holding the left mouse button</li>\
+  <li>Zoom using the mouse wheel or the +/- buttons inside the visualisation panel</li>\
 </ul>\
-<b>Export</b>\
+<\br>\
+<b>Export:</b>\
 <ul>\
-<li>Export the visualisation using the options in the Export menu entry</li>\
-<li>Exported images will always contain the whole graph, not just the area shown in the panel</li>\
+  <li>Export the visualisation using the options in the Export menu entry</li>\
+  <li>Exported images will always contain the whole graph, not just the area shown in the panel</li>\
+</ul>\
+</html>
+
+welcome_interpreter =\
+<html>\
+<div style='text-align: center;'><b>Interpreter</b></div><br\>\
+<b>Stepping forward, backwards and to a solution:</b>\
+<ul>\
+  <li>The interpretation automatically starts once a valid query has been sent</li>\
+  <li>Stepping operations can be issued by clicking the respective toolbar buttons</li>\
+  <li>The next step and previous step operations both make the interpreter do a single step<\br>\
+      in one direction</li>\
+  <li>The next solution button makes the interpreter run until a new solution is found</li>\
+  <li>The search for a new solution can always be canceled using the respective cancel button;<\br>\
+      this causes the interpretation to finish the current step and then pause</li>\
+</ul>\
+<\br>\
+<div style='text-align: center;'>To start a new interpretation, simply enter and send a new query.<\br>\
+To restart the current interpretation, step back to the beginning or send the query a second time.</div><br\>\
+</html>
+
+welcome_extras =\
+<html>\
+<div style='text-align: center;'><b>Extras</b></div><br\>\
+<b>Built-in standard library:</b>\
+<ul>\
+  <li>VIPER has a built-in standard library that provides common rule definitions</li>\
+  <li>To de-/activate the standard library, use the Settings > Enable standard library<\br>\
+      menu item in the menu bar</li>\
+  <li>To show the contents of the standard library, use the Help > Show standard library<\br>\
+      menu item in the menu bar</li>\
+</ul>\
+<b>Changing the language:</b>\
+<ul>\
+  <li>You can always change the language by using the Settings > Language menu in the menu bar</li>\
 </ul>\
 </html>
