qa: Translate welcome popup to English

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -242,7 +242,7 @@ welcome_visualisation =\
 
 welcome_interpreter =\
 <html>\
-<div style='text-align: center;'><b>Interpreter</b></div><br\>\
+<div style='text-align: center;'><b>Using the Interpreter</b></div><br\>\
 <b>Stepping forward, backwards and to a solution:</b>\
 <ul>\
   <li>The interpretation automatically starts once a valid query has been sent</li>\
