qa: Fix manual text overflow

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -127,7 +127,7 @@ manual_manual =\
   <li>The output area has three different output types: info, error and success</li>\
   <li>Info: Black text, mostly information about file operations</li>\
   <li>Error: Red text, mostly caused by unsuccessful parsing or file operations</li>\
-  <li>Success: Green text, used for succesful unification during interpretation</li>\
+  <li>Success: Green text, used for succesful results during interpretation</li>\
 </ul>\
 </html>\
 
