qa: Draft "new features" section, add first items

--- a/Documentation/Testbericht/bericht.tex
+++ b/Documentation/Testbericht/bericht.tex
@@ -89,12 +89,47 @@
 
 \begin{enumerate}[label=\#\arabic*]
   \item \textbf{Hier steht die kurze Beschreibung des Fehlers}\\
-        Hier steht eine ausf\"uhrlichere Beschreibung inklusive der \enquote{Symptome} (was sieht man?). Warum tritt der Fehler auf?\\\\
+        Hier steht eine ausführlichere Beschreibung inklusive der \enquote{Symptome} (was sieht man?). Warum tritt der Fehler auf?\\\\
         \textbf{Behebung:} Was genau wurde geändert um es zu beheben?
 \end{enumerate}
 
 \section{Zusätzliche Features und Änderungen}
 
+Im Zuge der Verbesserung der Gebrauchstauglichkeit (\enquote{usability}) von VIPER wurde das Programm um einige Funktionalitäten erweitert.\\
+Diese haben sich sowohl durch eigene Benutzung, als auch durch .. anderer Personen ergeben.\\\\
+Im Folgenden werden die zusätzlich implementieren Funktionalitäten und Änderungen kurz erläutert.
+
+\begin{itemize}
+  \item \textbf{Nächste Lösung}\\
+        Die Funktion der \enquote{Nächste Lösung} Schaltfläche wurde dahingehend verändert, dass nun die nächste auftretende Lösung, ausgehend vom aktuell angezeigten Schritt, ausgegeben wird. Bisher wurde bis zur nächsten, noch nicht berechneten Lösung gesprungen.
+  \item \textbf{Letzte Lösung}\\
+        Um für eine eingegebene Abfrage alle möglichen Lösungen anzeigen zu lassen, wurde die \enquote{Letzte Lösung} Schaltfläche in der Werkzeugleiste eingeführt. Diese berechnet direkt alle Schritte der Abfrage und zeigt alle möglichen Lösungen in der Konsole an.
+  \item \textbf{Indikator für erfolgreiche Unifikation}\\
+        Ist die Unifikation eines (Teil-)Ziels erfolgreich, so wird der dazugehörige Knoten in der Visualisierung nun grün eingefärbt und um ein Häkchen (\ding{51}) ergänzt.
+  \item \textbf{Visualisierung des Cut}\\
+        \textit{todo}
+  \item \textbf{Menu "Über"}\\
+        \textit{todo}
+  \item \textbf{Anleitung}\\
+        \textit{todo}
+  \item \textbf{Inhalt Stdlib}\\
+        \textit{todo}
+  \item \textbf{Hinweis Stdlib überschreiben}\\
+        \textit{todo}
+  \item \textbf{Beispielprogramme}\\
+        \textit{todo}
+  \item \textbf{Tastenkombinationen für den Editor}\\
+        Um die Nutzbarkeit ... wurde der Editor um gebräuchliche Tastaturkürzel, namentlich ... und ... erweitert.
+  \item \textbf{Zoom wo Maus ist}\\
+        \textit{todo}
+  \item \textbf{Text Zoom, Größe speichern}\\
+        \textit{todo}
+  \item \textbf{Placeholder Text und Graph}\\
+        \textit{todo}
+  \item \textbf{Maus Spinner}\\
+        \textit{todo}
+
+\end{itemize}
 % Ergebnisse des Usability Testings (Reaktionen der Leute!)
 % Icons geändert/Buttons aufgeteilt, Zoomen, Shortcuts, Stdlib anzeigen
 
