qa: Increase PrefMan and IntMan coverage to about 80% average

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -100,6 +100,7 @@ expected_goalrest = Expected 'is', '=' or arithmetic comparison, got '%s'
 expected_list = Expected a list, got %s
 expected_list_rest = Expected a list remainder, got %s
 goal_not_supported = Goal not supported
+no_knowledgebase_present = No knowledge base present
 
 term = a term
 functor = functor
