qa: Finish "new features" section

--- a/Documentation/Testbericht/bericht.tex
+++ b/Documentation/Testbericht/bericht.tex
@@ -96,7 +96,7 @@
 \section{Zusätzliche Features und Änderungen}
 
 Im Zuge der Verbesserung der Gebrauchstauglichkeit (\enquote{usability}) von VIPER wurde das Programm um einige Funktionalitäten erweitert.\\
-Diese haben sich sowohl durch eigene Benutzung, als auch durch .. anderer Personen ergeben.\\\\
+Diese haben sich u.a. aus den Rückmeldungen von Testpersonen unseres Programms ergeben.\\\\
 Im Folgenden werden die zusätzlich implementieren Funktionalitäten und Änderungen kurz erläutert.
 
 \begin{itemize}
@@ -108,26 +108,26 @@ Im Folgenden werden die zusätzlich implementieren Funktionalitäten und Änderu
         Ist die Unifikation eines (Teil-)Ziels erfolgreich, so wird der dazugehörige Knoten in der Visualisierung nun grün eingefärbt und um ein Häkchen (\ding{51}) ergänzt.
   \item \textbf{Visualisierung des Cut}\\
         \textit{todo}
-  \item \textbf{Menu "Über"}\\
-        \textit{todo}
+  \item \textbf{Menüpunkt \enquote{Hilfe}}\\
+        Die Menüleiste wurde um den Eintrag \enquote{Hilfe} erweitert, der Optionen zum Anzeigen einer Anleitung für das Programm, des Inhalts der Standardbibliothek sowie eines \enquote{Über}-Dialogs enthält.
   \item \textbf{Anleitung}\\
-        \textit{todo}
-  \item \textbf{Inhalt Stdlib}\\
-        \textit{todo}
-  \item \textbf{Hinweis Stdlib überschreiben}\\
+        In der neu hinzugekommenen Anleitung wird dem Nutzer die grundlegende Arbeitsweise des Programms nahegelegt. Zusätzlich enthält sie eine Legende zu den Bedeutungen der Farben in der Konsole, sowie eine Hilfe zur Bedienung des Editors, der Visualisierung und der Schritt-Schaltflächen.
+  \item \textbf{Inhalt der Standardbibliothek}\\
+        Die Standardbibliothek wurde um einige, aus der Vorlesung \enquote{Programmierparadigmen} bekannte, Regeln ergänzt. Dazu gehören beispielsweise Listen-Sortierung, Quadratwurzel-Berechnung und Summenbildung.
+  \item \textbf{Hinweis bei Namenskonflikten mit der Standardbibliothek}\\
         \textit{todo}
   \item \textbf{Beispielprogramme}\\
         \textit{todo}
   \item \textbf{Tastenkombinationen für den Editor}\\
-        Um die Nutzbarkeit ... wurde der Editor um gebräuchliche Tastaturkürzel, namentlich ... und ... erweitert.
-  \item \textbf{Zoom wo Maus ist}\\
-        \textit{todo}
-  \item \textbf{Text Zoom, Größe speichern}\\
-        \textit{todo}
-  \item \textbf{Placeholder Text und Graph}\\
-        \textit{todo}
-  \item \textbf{Maus Spinner}\\
-        \textit{todo}
+        Um die Nutzbarkeit des Editors zu verbessern, wurde er um gebräuchliche Tastaturkürzel wie Strg+O zum Öffnen und Strg+S zum Speichern einer Datei erweitert.
+  \item \textbf{Zoom an der Position des Mauszeigers}\\
+        Wird in der Visualisierung mittels des Mausrads der angezeigte Graph vergrößert oder verkleinert, so wird die Richtung des Zooms über die Position des Mauszeigers über dem Graphen bestimmt. Bisher wurde in der Visualisierung zentral herein- bzw. herausgezoomt.
+  \item \textbf{Änderung der Schriftgröße in Editor und Konsole}\\
+        Um die Schriftgröße des Editors und der Konsole anpassen zu können, wurden zwei Schaltflächen \enquote{+} und \enquote{-} ähnlich denen in der Visualisierung hinzugefügt. Die Schaltflächen befinden sich in der Werkzeugleiste und verändern gleichzeitig die Schriftgröße des Editors sowie der Konsole. Diese Einstellung wird außerdem gespeichert und bleibt nach einem Programm-Neustart erhalten.
+  \item \textbf{Platzhalter-Hinweise}\\
+        Wurde noch keine Visualisierung gestartet, so wird im Visualisierungs-Bereich der Hinweis \enquote{Bitte Quellcode parsen und eine Abfrage eingeben, um die Visualisierung zu starten} angezeigt. Außerdem ist im Eingabefeld der Hinweis \enquote{Neue Abfrage eingeben...} sichtbar, sollte es nicht fokussiert sein.
+  \item \textbf{Darstellung des Mauszeigers}\\
+        Der Mauszeiger ändert seine Darstellung zur \enquote{Laden...}-Animation, wenn die Berechnung der nächsten Lösung etwas Zeit in Anspruch nimmt.
 
 \end{itemize}
 % Ergebnisse des Usability Testings (Reaktionen der Leute!)
