qa: Print warning for rules that appear in both the given program and the stdlib

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -75,6 +75,7 @@ export_file_error = Error exporting file
 export_unsupported_format = Error exporting file, unsupported format
 
 parser_success = Successfully parsed source code
+conflicting_rules = The following rule(s) are already defined in the standard library: %s. This may lead to unexpected behavior. Rename your rules or deactivate the standard library.
 parser_error = Error parsing source code
 parser_query_error = Error parsing query
 
