--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -31,6 +31,7 @@ tooltip_format = Format program
 tooltip_previousstep = Previous step
 tooltip_nextstep = Next step
 tooltip_nextsolution = Next solution
+tooltip_finishquery = Jump to the end of the current query
 tooltip_cancel = Cancel
 tooltip_zoom_in = Zoom in
 tooltip_zoom_out = Zoom out
