qa: Add "Sample Programs" explanation to report

--- a/Documentation/Testbericht/bericht.tex
+++ b/Documentation/Testbericht/bericht.tex
@@ -122,7 +122,7 @@ Im Folgenden werden die zusätzlich implementieren Funktionalitäten und Änderu
   \item \textbf{Hinweis bei Namenskonflikten mit der Standardbibliothek}\\
         Falls im geparsten Programm Regeln vorkommen, die Namenskonflikte mit Regeln aus der Standardbibliothek hervorrufen, so wird eine Warnung in der Konsole ausgegeben. Ist die Standardbibliothek nicht aktiviert, so wird der Hinweis nicht angezeigt.
   \item \textbf{Beispielprogramme}\\
-        \textit{todo}
+        Mehrere Beispiel-Programme, darunter ein Bekanntes mit den Regeln \texttt{father/2}, \texttt{mother/2} und \texttt{grandparent/2}, werden nun mit VIPER mitgeliefert und können über den \enquote{Datei}-Menüpunkt in den Editor geladen werden.
   \item \textbf{Tastenkombinationen für den Editor}\\
         Um die Nutzbarkeit des Editors zu verbessern, wurde er um gebräuchliche Tastaturkürzel wie Strg+O zum Öffnen und Strg+S zum Speichern einer Datei erweitert.
   \item \textbf{Zoom an der Position des Mauszeigers}\\
