--- a/Documentation/Testbericht/bericht.tex
+++ b/Documentation/Testbericht/bericht.tex
@@ -92,10 +92,25 @@
 \section{Gefundene Fehler}
 
 \begin{enumerate}[label=\#\arabic*]
-  \item \textbf{Hier steht die kurze Beschreibung des Fehlers}\\
-        Hier steht eine ausführlichere Beschreibung. Warum tritt der Fehler auf?\\\\
-        \textbf{Symptome:} Was genau sieht man?\\
-        \textbf{Behebung:} Was genau wurde geändert um es zu beheben?
+  \item \textbf{\enquote{Nächster Schritt} Schaltfläche wird fälschlicherweise deaktiviert}\\
+        Wird während einer Interpretation die \enquote{Vorheriger Schritt} Schaltfläche verwendet und anschließend die \enquote{Nächster Schritt} Schaltfläche betätigt, so wird danach letztere Schaltfläche deaktiviert.\\\\
+        \textbf{Symptome:} Die \enquote{Nächster Schritt} Schaltfläche wird deaktiviert und kann nicht mehr betätigt werden, obwohl es noch Schritte geben kann.\\
+        \textbf{Behebung:} Im entsprechenden Controller muss der korrekte Status der Schaltflächen (\texttt{ClickableState}) gesetzt werden.
+
+  \item \textbf{\enquote{Abbrechen} Schaltfläche wird nicht aktiviert}\\
+        Wird die \enquote{Nächste Lösung} Schaltfläche betätigt und die Interpretation dauert etwas länger, so wird die \enquote{Abbrechen} Schaltfläche nicht aktiviert. Die Interpretation kann also nicht abgebrochen werden.\\\\
+        \textbf{Symptome:} Die \enquote{Abbrechen} Schaltfläche bleibt deaktiviert.\\
+        \textbf{Behebung:} Der entsprechende Controller muss den korrekten Status der Schaltflächen (\texttt{ClickableState}) setzen, wenn ein Thread für die Berechnung der nächsten Lösung gestartet wird.
+
+  \item \textbf{Standardbibliothek kann nicht korrekt geladen werden}\\
+        Wird VIPER als eine kompilierte \texttt{.jar} Datei gestartet, so wirft das Parsen eines Prolog-Programms bei aktivierter Standardbibliothek eine \texttt{FileSystemNotFoundException}. Das Parsen ist trotzdem möglich, es erscheint eine Fehlermeldung in der Konsole und die Regeln aus der Standardbibliothek sind nicht verfügbar.\\\\
+        \textbf{Symptome:} In der Konsole erscheint eine Fehlermeldung. Wurde die \texttt{.jar} Datei über eine Konsole gestartet, so wird dort ein Stacktrace der Java Virtual Machine (JVM) ausgegeben.\\
+        \textbf{Behebung:} Die in der \texttt{.jar} Datei enthaltene Standardbibliothek muss über einen Java Stream eingelesen werden, anstatt als Datei behandelt und geöffnet zu werden.
+
+  \item \textbf{Im \enquote{Standardbibliothek anzeigen} Fenster ist kein Scrollen möglich}\\
+        Über den Menüpunkt \enquote{Standardbibliothek anzeigen} lässt sich der Inhalt der Standardbibliothek in einem neuen Fenstern anzeigen. Bei langem Code ist in diesem Fenster kein Scrollen möglich, der Inhalt wird am unteren Fensterrand abgeschnitten.\\\\
+        \textbf{Symptome:} Im geöffneten \enquote{Standardbibliothek anzeigen} Fenster ist Code, der über den unteren Fensterrand hinausgeht, nicht mehr sichtbar.\\
+        \textbf{Behebung:} Das zum Anzeigen des Inhalts verwendete Textfeld muss in einem Java Swing \texttt{JScrollPane} eingebettet werden, damit Scrollen möglich ist.
 \end{enumerate}
 
 \section{Zusätzliche Features}
@@ -126,14 +141,13 @@ Im Folgenden werden die zusätzlich implementieren Funktionalitäten und Änderu
   \item \textbf{Tastenkombinationen für den Editor}\\
         Um die Nutzbarkeit des Editors zu verbessern, wurde er um gebräuchliche Tastaturkürzel wie Strg+O zum Öffnen und Strg+S zum Speichern einer Datei erweitert.
   \item \textbf{Zoom an der Position des Mauszeigers}\\
-        Wird in der Visualisierung mittels des Mausrads der angezeigte Graph vergrößert oder verkleinert, so wird die Richtung des Zooms über die Position des Mauszeigers über dem Graphen bestimmt. Bisher wurde in der Visualisierung zentral herein- bzw. herausgezoomt.
+        Wird in der Visualisierung mittels des Mausrads der angezeigte Graph vergrößert oder verkleinert, so wird die Richtung des Zooms über die Position des Mauszeigers über dem Graphen bestimmt. Bisher wurde in der Visualisierung zentral herein- bzw. herausgezoomt. Außerdem wurde die Sensitivität beim Zoomen mit dem Mausrad verringert.
   \item \textbf{Änderung der Schriftgröße in Editor und Konsole}\\
         Um die Schriftgröße des Editors und der Konsole anpassen zu können, wurden zwei Schaltflächen \enquote{+} und \enquote{-} ähnlich denen in der Visualisierung hinzugefügt. Die Schaltflächen befinden sich in der Werkzeugleiste und verändern gleichzeitig die Schriftgröße des Editors sowie der Konsole. Diese Einstellung wird außerdem gespeichert und bleibt nach einem Programm-Neustart erhalten.
   \item \textbf{Platzhalter-Hinweise}\\
         Wurde noch keine Visualisierung gestartet, so wird im Visualisierungs-Bereich der Hinweis \enquote{Bitte Quellcode parsen und eine Abfrage eingeben, um die Visualisierung zu starten} angezeigt. Außerdem ist im Eingabefeld der Hinweis \enquote{Neue Abfrage eingeben...} sichtbar, sollte es nicht fokussiert sein.
   \item \textbf{Darstellung des Mauszeigers}\\
         Der Mauszeiger ändert seine Darstellung zur \enquote{Laden...}-Animation, wenn die Berechnung der nächsten Lösung etwas Zeit in Anspruch nimmt.
-
 \end{itemize}
 
 \section{Nutzertests}
