qa: Add menu item to load sample programs shipped with VIPER

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -4,6 +4,7 @@ menu_open = Open
 menu_save = Save
 menu_saveas = Save as...
 menu_recent = Recently used
+menu_samples = Sample programs
 menu_exit = Exit
 
 menu_program = Program
