qa: Fix CommandZoomTest, add reset vis functionality to menu

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -21,7 +21,8 @@ menu_language = Language
 menu_help = Help
 menu_about = About
 menu_show_standard = Show standard library
-menu_reset_zoom = Reset text zoom
+menu_reset_text_zoom = Reset text zoom
+menu_reset_visualisation_zoom = Reset visualisation zoom
 
 tooltip_new = Create new file
 tooltip_open = Open file
