qa: Show better message on a cut goal with no parent
If the query consists of a cut goal only, that goal does not have a parent.
After this commit, cuts without a parent have a special note on them instead of the default cut note.

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -83,6 +83,7 @@ parser_query_error = Error parsing query
 visualisation_started = Visualisation started.
 viper_started = VIPER %s ready
 visualisation_cut_note = Backtracking to this subgoal<br />will make %s fail
+visualisation_cut_abort = Backtracking to this subgoal<br />will abort execution
 
 arithmetic_unset_variable = Unset variable: %s
 arithmetic_unsupported_term = Unsupported term: %s
