qa: Fix parser crashing when the first character is illegal

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -95,6 +95,7 @@ no_more_solutions = No more solutions.
 button_send = Send
 
 position = near %s in Line %d, Column %d
+first_character = the first character
 illegal_char = Illegal character
 operator_not_recognized = Operator %s not recognized
 expected_instead = Expected %s instead of '%s'
